tests/errors/c-header-array-return-by-value.ari
@export("ari_make_array")
pub fn make_array() -> [i64, 2] {
  return [1, 2];
}
